--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ section{
     border: rgb(53, 53, 53) 0.1rem solid ;
     border-color: rgb(163,163,163);
     text-align: center;
+    height: 200px;
 }
 .section-container{
     gap: 4rem;
